--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
-    "typescript": "3.3.3"
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
