Forces craft redirect to CP login page & updates react app compile scripts

--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
   "devDependencies": {
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
+    "http-server": "^0.11.1",
     "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "npm run build",
+    "compile": "npm run build && http-server ./build/",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "eject": "react-scripts eject",
+    "preview": "http-server ./build/ -o"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
