Adds custom Craft 3 module for building the API endpoints

--- a/craftcms/composer.json
+++ b/craftcms/composer.json
@@ -5,7 +5,7 @@
   },
   "autoload": {
     "psr-4": {
-      "modules\\": "modules/"
+      "modules\\prototypemodule\\": "modules/prototypemodule/src/"
     }
   },
   "config": {
