--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
     "http-server": "^0.11.1",
+    "node-sass": "^4.12.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
