--- a/craftcms/composer.json
+++ b/craftcms/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "craftcms/cms": "^3.0.0",
+    "craftcms/element-api": "2.6.0",
     "mmikkel/incognito-field": "1.1.1.1",
     "vlucas/phpdotenv": "^2.4.0"
   },
