--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "main": "src/index.tsx",
   "dependencies": {
+    "@types/react-router-dom": "^4.3.4",
     "react": "16.8.4",
     "react-dom": "16.8.4",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.3"
   },
   "devDependencies": {
